* Bulk mail options ($wgEnotifImpersonal, $wgEnotifUseJobQ) for large sites
* Links to redirect pages in categories are wrapped in
  <span class="redirect-in-category"></span>
* Introduced 'ImageOpenShowImageInlineBefore' hook; see docs/hooks.txt for
  more information
* (bug 9628) Show warnings about slave lag on Special:Contributions,
  Special:Watchlist
  
== Bugfixes since 1.10 ==

* (bug 9712) Use Arabic comma in date/time formats for Arabic and Farsi
* (bug 9670) Follow redirects when render edit section links to transcluded
  templates.
* (bug 6204) Fix incorrect unindentation with $wgMaxTocLevel
* (bug 3431) Suppress "next page" link in Special:Search at end of results
* Don't show unblock form if the user doesn't have permission to use it
  (cosmetic change, no vulnerabilities existed)
* Subtitle success message when unblocking a block ID instead of a pseudo link
  like [[User:#123|#123]]
* Use the standard HTTP fetch functions when retrieving remote wiki pages
  through transwiki, so we can take advantage of cURL goodies if available
* Disable custom user javascript in Special:Preferences, to avoid the risk
  of a compromised script sniffing passwords etc.
* (bug 9854, 3770) Clip overflow text in gallery boxes for visual cleanliness
  instead of letting it flow outside the box or trigger ugly scroll bars.
* Tooltips for print version and permalink
* Links to the MediaWiki namespace for system messages having their default
  values are no longer shown as nonexistent (e.g., in red)
* Special:Ipblocklist differentiates between empty list and no search results.
* (bug 5375) profiling does not respect read-only mode.
* (bug 7070) monobook/user.gif has antialias artifacts
* (bug 9877) Fix Catalan translation of rev-deleted-text-view
* (bug 9123) Safer way when applying $wgLocalTZoffset
* (bug 9896) Documentation for $wgSquidServers and X-FORWARDED-FOR
* (bug 9417) Uploading new versions of images when using Postgres no longer 
  throws warnings.